# miniDiffusion

./: .gitignore  README.md  data_create.py  dataset.py  model.py  pyproject.toml  train.py  train_cnd.py  train_json.py
data/: 0000.json  0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json  0011.json  0012.json  0013.json  0014.json  0015.json  0016.json
model/: __init__.py  pointnet_denoiser.py  pointnet_denoiser_cnd.py
visualize/: visualize_all_traces.py  visualize_cfg.py  visualize_circle2star.py  visualize_compare_json.py  visualize_dataset.py  visualize_denoise_json.py  visualize_denoising.py  visualize_morph.py  visualize_morph_3d.py  visualize_morph_json.py  visualize_overlay_json.py  visualize_point_trace.py  visualize_samples.py  visualize_shapes.py  visualize_tracking_json.py
